--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "d-movie",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://varseb.github.io/d-movie",
   "author": "Sebastian Azagra Sinatra <sebazagra@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
@@ -13,20 +15,25 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "4.0.0",
     "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
