--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "web-vitals": "^0.2.4"
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
