--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
+    "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-transition-group": "^4.4.1",
+    "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
