--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
